<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/tool_bar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            </include>

            <TextView
                android:id="@+id/subjectNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/subjectNameHeader"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <EditText
                android:id="@+id/subjectNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:scrollbars="horizontal"
                android:hint="@string/subjectNameHint"
                android:shadowColor="@android:color/holo_blue_dark"
                android:shadowDx="2"
                android:shadowDy="4"/>

            <TextView
                android:id="@+id/noteNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:text="@string/noteNameHeader"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <EditText
                android:id="@+id/noteNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:hint="@string/noteNameHint"
                android:shadowColor="@android:color/holo_blue_dark"
                android:shadowDx="2"
                android:shadowDy="4"/>

            <TextView
                android:id="@+id/NoteTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/noteTextHeader"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>

            <EditText
                android:id="@+id/noteEditBox"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_note_background"
                android:padding="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:ems="15"
                android:hint="@string/noteEditHint"
                android:scrollbars="vertical" >
            </EditText>

            <Button
                android:id="@+id/createNoteButton"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createNoteButton"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="createNote"/>

            <Button
                android:id="@+id/cancelNoteButton"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelNoteButton"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="cancelNote"/>
        </LinearLayout>
    </ScrollView>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>